- Z-index of clone - Remove glitch after 5 secs - Hello world border missing - fixes on mobile nav - Transition of pages timing issue

--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -71,13 +71,27 @@ DEPENDENCIES
     }
 }
 
-.element-box {
-    .abbr {
-        font-size: 3.350em;
-    }
+.element {
+    &-box {
+        &:hover {
+            border: 3px solid $blue;
+            margin: 0;
+            padding: 0;
 
-    .full {
-        font-size: 0.8em;
+            .icon {
+                @include scale(1);
+
+                opacity: 1;
+            }
+        }
+
+        .abbr {
+            font-size: 3.350em;
+        }
+
+        .full {
+            font-size: 0.8em;
+        }
     }
 }
 
